--- a/README.ORG
+++ b/README.ORG
@@ -1,6 +1,6 @@
 * Definition
 
-Makes working with pagination APIs fast. Based on core.async.
+Leverage pagination APIs with core.async.
 
 * Installation
 
@@ -38,6 +38,8 @@ You can then use the ~blat~ library to retrieve all pages concurrently.
     (fetch f 2 (inc total) results)))
 #+end_src
 
+The first use of ~find~ is synchronous. It is called with two arguments, query and the first page of results. The results are destructured to get the the number of total pages and the initial results. The second use of ~find~ is asynchronous via ~fetch~, which internally calls it with an arity of 3, the third argument being a channel.
+  
 * Video tutorial
 
 Please [[https://www.youtube.com/watch?v=1KRWfVhbBM8][refer]] to the miniseries available on Youtube, "Exploratory programming with the TMDb API". 
