--- a/README.ORG
+++ b/README.ORG
@@ -1,12 +1,16 @@
-* Definition
+* Blat
+
+In Yiddish, בלאאַט, /page/. 
+
+** Definition
 
 Leverage pagination APIs with core.async.
 
-* Installation
+** Installation
 
 [[https://clojars.org/org.danielsz/blat/latest-version.svg]]
 
-* Usage example
+** Usage example
 
 Given a function that knows how to operate on a page in a pagination API, for example, the tMDB API:
 
@@ -40,11 +44,11 @@ You can then use the ~blat~ library to retrieve all pages concurrently.
 
 The first use of ~find~ is synchronous. It is called with two arguments, query and the first page of results. The results are destructured to get the number of total pages and the initial results. The second use of ~find~ is asynchronous via ~fetch~, which internally calls it with an arity of 3, the third argument being a channel.
   
-* Video tutorial
+** Video tutorial
 
 Please [[https://www.youtube.com/watch?v=1KRWfVhbBM8][refer]] to the miniseries available on Youtube, "Exploratory programming with the TMDb API". 
 
-* License
+** License
 
 Distributed under the [[http://opensource.org/licenses/eclipse-1.0.php][Eclipse Public License]] (the same as Clojure) together with the [[https://996.icu/#/en_US][966.icu]] [[https://github.com/996icu/996.ICU/blob/master/LICENSE][license]].
 
